<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F2C34"
    android:fitsSystemWindows="false"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayoutAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewSettings"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/ic_menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <de.hdodenhof.circleimageview.CircleImageView

                android:id="@+id/profile_img"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/profile"
                android:layout_marginTop="@dimen/_4sdp"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="2dp"
                app:layout_constraintStart_toEndOf="@id/imageViewSettings"
                app:layout_constraintStart_toStartOf="@+id/imageViewSettings"
                app:layout_constraintTop_toBottomOf="@id/imageViewSettings" />

            <TextView
                android:id="@+id/textView161"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/binish"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginStart="@dimen/_8sdp"

                app:layout_constraintBottom_toBottomOf="@+id/profile_img"
                app:layout_constraintStart_toEndOf="@+id/profile_img"
                app:layout_constraintTop_toTopOf="@+id/profile_img" />


            <androidx.appcompat.widget.SearchView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="@dimen/_22sdp"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:background="@drawable/bg_search"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewSettings"
                app:layout_constraintEnd_toStartOf="@+id/cart"
                app:layout_constraintStart_toEndOf="@+id/imageViewSettings"
                app:layout_constraintTop_toTopOf="@+id/imageViewSettings"
                app:queryHint="Search" />


            <ImageView
                android:id="@+id/cart"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:contentDescription="@string/yy"
                android:src="@drawable/cart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayoutAbout"
            app:layout_constraintVertical_bias="1.0">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragment_container"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                        android:layout_height="match_parent"
                app:defaultNavHost="true"
                app:navGraph="@navigation/nav_graph">

            </androidx.fragment.app.FragmentContainerView>
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_nav"
            app:itemTextColor="@drawable/selector_menu"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="#1F2C34"
            android:paddingHorizontal="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/category"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/home_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/pp"
                    app:itemIconTint="@drawable/selector_menu"
                    android:src="@drawable/home"
                    />

                <TextView
                    android:id="@+id/txt_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/home_text"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/home"
                app:layout_constraintEnd_toStartOf="@+id/cartLayout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/home"
                app:layout_constraintTop_toTopOf="@+id/home"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/category_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:contentDescription="@string/too"
                    android:src="@drawable/category" />

                <TextView
                    android:id="@+id/category_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/categories"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cartLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/home"
                app:layout_constraintEnd_toStartOf="@+id/account"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/category"
                app:layout_constraintTop_toTopOf="@+id/home"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imgCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/tpo"
                    android:src="@drawable/cart" />

                <TextView
                    android:id="@+id/txt_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/favorites"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cartLayout"
                app:layout_constraintTop_toTopOf="@+id/home"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/account_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/tio"
                    android:src="@drawable/account" />

                <TextView
                    android:id="@+id/txt_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/account"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80EDBFBF"
        android:visibility="gone" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_layout"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>